dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,9 +60,9 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
  
-    --border: 0 0% 15%;
-    --input: 0 0% 15%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: 0 0% 25%;
+    --input: 0 0% 25%;
+    --ring: 0 0% 35%;
   }
 }
  
